docker-app/k8s/deployment-env.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: docker-app
  template:
    metadata:
      labels:
        app: docker-app
    spec:
      containers:
        - name: docker-app
          image: rimskiy/docker-app:0.0
          ports:
            - name: web
              containerPort: 8000
          imagePullPolicy: Always
          livenessProbe:
            httpGet:
              port: 8000
              path: /
            initialDelaySeconds: 10
            periodSeconds: 5
            timeoutSeconds: 2
          readinessProbe:
            httpGet:
              port: 8000
              path: /health
            initialDelaySeconds: 10
            periodSeconds: 5
      restartPolicy: Always
