docker-app/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-service
spec:
  selector:
    app: docker-app
  ports:
    - protocol: TCP
      port: 9000
      targetPort: web
  type: NodePort
